クイズ作成最新版（required修正済み）

--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -41,9 +41,9 @@
         </div>
 			  {% endif %}
         <ul class="tab-contents">
-
+<!-- 確認用
           <p>サンプルテキストエリアのrequired属性の値：<span id="sampleOutput"></span></p>
-
+ -->
           <!--        Aパターン         -->
           <li class="active">
             <article class="selected">
@@ -353,7 +353,7 @@
                           <table class="table">
                             <tr>
                               <td>
-                                <label><input type="radio" name="answertype2" value="hoge1" onclick="entryChange2(),setRequired(false);" checked="checked" />：①はい、いいえで解答</label>
+                                <label><input type="radio" name="answertype2" value="hoge1" onclick="entryChange2(),setRequired2(false);" checked="checked" />：①はい、いいえで解答</label>
                               </td>
                             </tr>
                             <!-- 表示非表示切り替え -->
@@ -366,15 +366,15 @@
                               </td>
                             </tr>
                             <td>
-                              <label><input type="radio" name="answertype2" value="hoge2" onclick="entryChange2(),setRequired(true);" />：②解答文で解答</label>
+                              <label><input type="radio" name="answertype2" value="hoge2" onclick="entryChange2(),setRequired2(true);" />：②解答文で解答</label>
                             </td>
                             <!-- 表示非表示切り替え -->
                             <tr id="secondBox2">
                               <td>
-                                <input type="text" class="form-control correct" name="correct_answer" id="correct" placeholder="正解を書いてください" value="" required>
+                                <input type="text" class="form-control correct" name="correct_answer" id="correct2" placeholder="正解を書いてください" value="" required>
                               </td>
                               <td>
-                                <input type="text" class="form-control incorrect" name="incorrect_answer" id="incorrect" placeholder="不正解を書いてください" value="" required>
+                                <input type="text" class="form-control incorrect" name="incorrect_answer" id="incorrect2" placeholder="不正解を書いてください" value="" required>
                               </td>
                             </tr>
                           </table>
