--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -13,6 +13,7 @@
     <title>めざせ！とべマスター</title>
 </head>
 <body>
+<div class="contentIn">
 	<!-- トップページ -->
 	<div class="index">
 		<h1>めざせ！とべマスター<!-- <img src="../../public/images/web/img_logo01.png" srcset="../../public/images/web/img_logo01@2x.png 2x, ../../public/images/web/img_logo01@3x.png 3x" alt="">--></h1>
@@ -54,7 +55,7 @@
 	</div>
 
 	<!-- クイズ出題画面 -->
-	<div class="sec01">
+	<div class="sec01" class="active">
 		<ul class="slider questionImg">
 			<li>
 				<img src="../../public/images/web/dummy.png" srcset="../../public/images/web/dummy@2x.png 2x, ../../public/images/web/dummy@3x.png 3x" alt="">
@@ -64,9 +65,7 @@
 			<p class="tC">第<span class="questionNo">1</span>問</p>
 			<p class="questionText">この動物はカピバラ？それともヌートリア？</p>
 		</div>
-		<div class="time" style="width:100%;height:100%;background-color:white;z-index:9">
-			<div class="time"><div class="timebar"></div></div>
-		</div>
+		<div class="time"><div class="timebar"></div></div>
 		<div class="playerArea">
 			<p><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt="" class="icon"></p>
 			<p class="playerName"><span class="animal">シロクマ</span>さんのターン</p>
@@ -88,9 +87,8 @@
 			<p class="tC">第<span class="questionNo">1</span>問</p>
 			<p class="questionText">正解は…</p>
 		</div>
-		<div class="time" style="width:100%;height:100%;background-color:white;z-index:9">
-			<div class="time"><div class="timebar"></div></div>
-		</div>
+		
+		<div class="time"><div class="timebar"></div></div>
 		<div class="correctArea">
 			<p class="answerBtn btnStyle02">あああああ</p>
 		</div>
@@ -110,9 +108,7 @@
 			<p class="tC">第<span class="questionNo">1</span>問</p>
 			<p class="questionText">解説！</p>
 		</div>
-		<div class="time" style="width:100%;height:100%;background-color:white;z-index:9">
-			<div class="time"><div class="timebar"></div></div>
-		</div>
+		<div class="time"><div class="timebar"></div></div>
 		<div class="commentaryArea">
 			<p>ヌートリアは、カピパラと比べ前歯が見えやすく色もオレンジ色をしています。また、ヌートリアには長い尻尾がありますがカピバラにはありません。</p>
 		</div>
@@ -224,7 +220,7 @@
 			<li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
 		</ul>
 	</div>
-	
+</div>
 <!--	<script src="/tobe_master/public/js/multi_import.js" type="text/javascript" charset="utf-8"></script>-->
 </body>
 </html>
