--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -55,7 +55,7 @@
 	</div>
 
 	<!-- クイズ出題画面 -->
-	<div class="sec01" class="active">
+	<div class="sec01 active">
 		<ul class="slider questionImg">
 			<li>
 				<img src="../../public/images/web/dummy.png" srcset="../../public/images/web/dummy@2x.png 2x, ../../public/images/web/dummy@3x.png 3x" alt="">
