--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -165,30 +165,6 @@
 				</div>
 			</li>
 		</ul>
-		<div class="next">
-			<button type="button" class="btnStyle03" value="">次の問題へ</button>
-		</div>
-	</div>
-
-	<!-- ゲームオーバー画面 -->
-	<div class="gameover">
-		<h2>GAME OVER</h2>
-		<ul class="playerList03">
-			<li>
-				<p class="fL"><img src="../../public/images/web/ico_animal01.png" srcset="../../public/images/web/ico_animal01@2x.png 2x, ../../public/images/web/ico_animal01@3x.png 3x" alt=""></p>
-				<div class="fR">
-					<p class="playerName">シロクマ</p>
-					<p class="correct">正解数：<span class="num">4</span></p>
-				</div>
-			</li>
-			<li>
-				<p class="fL"><img src="../../public/images/web/ico_animal02.png" srcset="../../public/images/web/ico_animal02@2x.png 2x, ../../public/images/web/ico_animal02@3x.png 3x" alt=""></p>
-				<div class="fR">
-					<p class="playerName">カンガルー</p>
-					<p class="correct">正解数：<span class="num">0</span></p>
-				</div>
-			</li>
-		</ul>
 		<ul class="btnList03">
 			<li><button type="button" class="btnStyle04" value="">再挑戦する</button></li>
 			<li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
@@ -221,6 +197,6 @@
 		</ul>
 	</div>
 </div>
-<!--	<script src="/tobe_master/public/js/multi_import.js" type="text/javascript" charset="utf-8"></script>-->
+	<script src="/tobe_master/public/js/multi_import.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
