--- a/templates/web/test_html/timebar.html
+++ b/templates/web/test_html/timebar.html
@@ -15,18 +15,18 @@
 	<div id="test">
 		
 		<!--プレイ者を確認-->
-		<div id="box1" style="width:100%;height:100%;background-color:beige;z-index:10">
+		<div class="box1" style="width:100%;height:100%;background-color:beige;z-index:10">
 		  <h1>複数人プレイで決定押して飛んでくるページ<br>kuwanoですか？</h1>
 		  <button class="next">kuwanoです</button>
 		</div>
 
 		<!--問題表示-->
-		<div id="box2" style="width:100%;height:100%;background-color:white;z-index:9">
-			<h1 id="qu"></h1>
+		<div class="box2" style="width:100%;height:100%;background-color:white;z-index:9">
+			<h1 id="questionText"></h1>
 			<!--残り時間を表示する-->
 			<div id="time"><div id="timebar"></div></div>
-			<button type="button" id="ans" value=""></button>
-			<button type="button" id="inc" value=""></button>
+			<button type="button" id="correct" value=""></button>
+			<button type="button" id="incorrect" value=""></button>
 		</div>
 
 	</div>
