--- a/public/css/web/multi.css
+++ b/public/css/web/multi.css
@@ -29,3 +29,9 @@
 	height:100%;
 	width: 100%;
 }
+#quizRepeat > div {
+	position:absolute;
+	background-color: #fff;
+	height:100%;
+	width: 100%;
+}
