--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -64,8 +64,10 @@
 				</li>
 			</ul>
 			<div class="questionArea">
-				<p class="tC">第<span class="questionNo">1</span>問</p>
-				<p class="questionText">この動物はカピバラ？それともヌートリア？</p>
+				<div class="inner">
+					<p class="tC">第<span class="questionNo">1</span>問</p>
+					<p class="questionText">この動物はカピバラ？それともヌートリア？</p>
+				</div>
 			</div>
 			<div class="time"><div class="timebar"></div></div>
 			<div class="playerArea">
@@ -73,8 +75,8 @@
 				<p class="playerName"><span class="animal">シロクマ</span>さんのターン</p>
 			</div>
 			<ul class="answerArea">
-				<li><button type="button" id="correct" class="answerBtn btnStyle01" value=""></button></li>
-				<li><button type="button" id="incorrect" class="answerBtn btnStyle02" value=""></button></li>
+				<li><button type="button" id="correct" class="answerBtn btnStyle01" value="">オーストラリア</button></li>
+				<li><button type="button" id="incorrect" class="answerBtn btnStyle02" value="">オーストラリア</button></li>
 			</ul>
 		</div>
 	</div><!--quizRepeat-->
@@ -87,8 +89,10 @@
 			</li>
 		</ul>
 		<div class="textArea question">
-			<p class="tC">第<span class="questionNo">1</span>問</p>
-			<p class="questionText">正解は…</p>
+			<div class="inner">
+				<p class="tC">第<span class="questionNo">1</span>問</p>
+				<p class="questionText">正解は…</p>
+			</div>
 		</div>
 		
 		<div class="correctArea">
@@ -107,8 +111,10 @@
 			</li>
 		</ul>
 		<div class="textArea answer">
-			<p class="tC">第<span class="questionNo">1</span>問</p>
-			<p class="answerText">解説！</p>
+			<div class="inner">
+				<p class="tC">第<span class="questionNo">1</span>問</p>
+				<p class="answerText">解説！</p>
+			</div>
 		</div>
 		<div class="commentaryArea">
 			<p>ヌートリアは、カピパラと比べ前歯が見えやすく色もオレンジ色をしています。また、ヌートリアには長い尻尾がありますがカピバラにはありません。</p>
