--- a/public/css/web/multi.css
+++ b/public/css/web/multi.css
@@ -1,14 +1,5 @@
 @charset "UTF-8";
 /* ↓まえだ確認用 */
-.contentIn > div:not(#quizRepeat),
-#quizRepeat > div {
-  display: none;
-}
-
-#quizRepeat > div.active {
-  display: block !important;
-}
-
 /* ↑まえだ確認用 */
 *, *:before, *:after {
   box-sizing: border-box;
@@ -17,9 +8,9 @@
 body {
   color: #000;
   font-size: 14px;
+  font-size: 4.375vw;
   font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, Osaka, 'MS PGothic', arial, helvetica, sans-serif;
   font-weight: normal;
-  line-height: 1.7;
 }
 
 .clearfix {
@@ -37,14 +28,16 @@ body {
   background-color: #fff;
 }
 .contentIn > div,
-.contentIn #quizRepeat > div {
+.contentIn #quizRepeat > div,
+.contentIn div[class^="sec"] {
   width: 100%;
   height: 100vh;
   background-color: #fff;
   position: absolute;
 }
-.contentIn .active {
-  z-index: 999 !important;
+
+.tL {
+  text-align: left !important;
 }
 
 .tC {
@@ -55,15 +48,7 @@ body {
   text-align: right !important;
 }
 
-.tL {
-  text-align: left !important;
-}
-
 div[class^="sec"] {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  background-color: #fff;
   background: url(../../images/web/bg01@3x.png) no-repeat;
   background-size: 100%;
 }
@@ -73,7 +58,6 @@ div[class^="sec"] {
   width: 100%;
   height: auto;
   min-height: 138px;
-  padding: 3% 5%;
   color: #fff;
   background: url(../../images/web/img_board01@3x.png) no-repeat;
   background-size: 100%;
@@ -92,7 +76,7 @@ div[class^="sec"] {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 0 5%;
+  padding: 2% 5% 0;
 }
 .questionArea > .inner > .tC,
 .textArea > .inner > .tC {
@@ -112,10 +96,72 @@ div[class^="sec"] {
   box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.69);
 }
 
+.answerArea {
+  padding-bottom: 2%;
+  overflow: hidden;
+}
+.answerArea > li {
+  display: inline-block;
+  width: 48%;
+}
+.answerArea > li + li {
+  margin-left: 4%;
+}
+
+[class*="btnStyle"] {
+  width: 100%;
+  padding: 0;
+  font-size: 18px;
+  font-size: 5.625vw;
+  font-weight: bold;
+  border: none;
+  outline: none;
+}
+
+.answerBtn {
+  color: #fff;
+  line-height: 29.1vw;
+  white-space: nowrap;
+  text-shadow: 0 3px 6px rgba(0, 0, 0, 0.6);
+}
+
+.btnStyle01 {
+  background: url(../../images/web/btn01@3x.png) no-repeat;
+  background-size: cover;
+}
+
+.btnStyle02 {
+  background: url(../../images/web/btn02@3x.png) no-repeat;
+  background-size: cover;
+}
+
+.playerArea {
+  margin: 3% 0;
+}
+.playerArea > p {
+  text-align: center;
+}
+.playerArea .icon {
+  width: 20%;
+  margin: 0 auto;
+  background-color: skyblue;
+}
+.playerArea .playerName {
+  margin-top: 1%;
+  font-size: 12px;
+  font-size: 3.75vw;
+}
+
+.answerArea {
+  width: 94%;
+  margin: 0 auto;
+}
+
 .time {
-  width: 80%;
-  height: 5%;
-  border: 5px solid #333;
+  width: 95%;
+  height: 2%;
+  margin: -2% auto 0;
+  border: 3px solid #333;
   position: relative;
   overflow: hidden;
 }
